--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -6,8 +7,27 @@ h1 {
     font-size: 50px;
 }
 
-.name-highlight {
-    color: orange;
+h2 {
+    font-size: 40px;
+}
+
+p {
+    color: gray;
+}
+
+section {
+    height: 500px;
+    padding-bottom: 120px;
+}
+
+.text-highlight {
+    color: #0c74eb;
+}
+
+.top-banner {
+    height: 500px;
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
 
 .half-width {
@@ -20,4 +40,51 @@ h1 {
 .half-width img {
     width: 100%;
 }
+
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(180deg, skyblue, blue);
+    padding: 10px 20px;
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+}
+
+.dream-area {
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.experience-area {
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.single-experience {
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 75%;
+    background-color: white;
+}
+
+#full-stack {
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightSalmon, tomato);
+    border-image-slice: 1;
+}
+
+#baby {
+    border-left: 7px solid;
+    border-image: linear-gradient( blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
+    font-size: 13px;
+}
+
+
  
